--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-
+<meta property="og:image" content="https://vladocar.github.io/nanoJS/nanoJS.png">
 <link rel="stylesheet" href="lib/style.css">
 <script src="lib/docJS.js"></script>
 <script src="src/nanoJS.js"></script>
@@ -17,12 +17,12 @@ function loadthisfunction(){
 window.addEventListener('load',loadthisfunction,false);
 
 </script>
-
+  <title>nanoJS - Minimal standalone JS library for DOM manipulation</title>
 
 </head>
 <div id="intro"><h1>nanoJS</h1>
 <h3>Minimal standalone JS library for DOM manipulation</h3>
-<p>nanoJS is around 100 lines of code (1.2 Kb compressed) JavaScript library for basic DOM manipulation. It has jQuery like syntax and supports chaining.
+<p>nanoJS is around 100 lines of code (0.6 Kb compressed) JavaScript library for basic DOM manipulation. It has jQuery like syntax and supports chaining.
 </p>
 
 <p>Because is so small and simple you can add or remove methods directly in the library, meaning is very customizable. All methods are unrelated so removing one will not affect the library in any way (except each method).
@@ -44,7 +44,7 @@ $("#a").on("click", function(){
 <p>It uses familiar jQuery like syntax.</p>
 
 <p>It works in IE9 and later.</p>
-<h2 class="l" style="text-decoration: underline"><a href="#"> Download on Github  </a></h2>
+<h2 class="l" style="text-decoration: underline"><a href="https://github.com/vladocar/nanoJS/"> Download on Github  </a></h2>
 
 <h3> Here is the list of all the methods:</h3>
 </div>
