--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta name="yandex-verification" content="23c9e46a407dba27" />
 <meta property="og:image" content="https://vladocar.github.io/nanoJS/nanoJS.png">
 <link rel="stylesheet" href="lib/style.css">
 <script src="lib/docJS.js"></script>
